 - Fixed American Naval OOBs so they didn't get 2015 modules in 2000
 - Fixed a CV MR text icon error
 - Fixed missing localization for Production Cost Max modifiers
 - Fixed PMC's trying to spawn units with non-existing c&c equipment
 - Fixed wrong number of max planes in airwing menu (instead of 100 from vanilla now 50)
 - Fixed broken localisation for revolts in Spain
 - Fixed broken icon for focus Spread Right Wing Propagand in Spanish Focus Tree
 - Fixed issues with the North Korean Focus Tree
 - Belize, Northern Cyprus, Cyprus, Bahrain, Hezbollah now have gifted income to avoid debt shit
 - Fixed strange effects tooltip in event IMF Demands Land Reform
 - Fixed missing artillety technology for Liechtenstein
 - Fixed decision to reduce autonomy don't disappear if you lost puppet
 - Fixed prerequisites in decision Replace Saudi Arabia as Leader of the GCC
 - Kuwait now don't should have completed focuses in 2000

Focus Tree:
 - Tweaks to the American Focus Tree

GUI:
 - Better position for things in topbar
 - Fixed the Ship Filters section in the naval production screen

 Performance:
 - Optimized on_startup on action so the game should load in faster

 Quality of Life (QoL):
 - Added Project Count to International Investments Tooltip

v1.7.1 - Hotfix & BBA Compatibility

AI:
 - Azerbaijani AI should no longer suicide into Iran
 - Armenia should be more chummy with Russia
 - Danish AI should be more chummy with Scandinavian nations
 - Improved French Francosphere AI
 - Ukrainian AI if it has a wargoal shouldn't suicide against Russia
 - Russian AI now must choose Putin with historical/United Russia path
 - Tweaked the Rejection AI for Economic Aid (Opinion matters)
 - AI should be less likely to go jihadist as the Gulf Nations
 - AI will no longer get submarine/ship defense companies if it has no dockyards
 - Economic Aid AI should now be more relative to opinions vs scripted hard triggers