@@ -11040,6 +11040,7 @@ defined_text = {
 	text = { trigger = { original_tag = KYR } localization_key = KYR.socialism }
 	text = { trigger = { original_tag = LAT } localization_key = LAT.socialism }
 	text = { trigger = { original_tag = LEB } localization_key = LEB.socialism }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.socialism }
 	text = { trigger = { original_tag = LES } localization_key = LES.socialism }
 	text = { trigger = { original_tag = LIB } localization_key = LIB.socialism }
 	text = { trigger = { original_tag = LIT } localization_key = LIT.socialism }
@@ -11298,6 +11299,7 @@ defined_text = {
 	text = { trigger = { original_tag = UKR } localization_key = UKR.Communist-State }
 	text = { trigger = { original_tag = USA } localization_key = USA.Communist-State }
 	text = { trigger = { original_tag = HLS } localization_key = HLS.Communist-State }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Communist-State }
 	text = { trigger = { original_tag = SMA date < 2016.1.1 } localization_key = SMA.Communist-State_2000 }
 	text = { trigger = { original_tag = SMA date > 2016.1.1 } localization_key = SMA.Communist-State_2017 }
 	text = { localization_key = generic.Communist-State }
@@ -11661,6 +11663,7 @@ defined_text = {
 	text = { trigger = { original_tag = GER } localization_key = GER.Caliphate }
 	text = { trigger = { original_tag = NOR } localization_key = NOR.Caliphate }
 	text = { trigger = { original_tag = PER } localization_key = PER.Caliphate }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Caliphate }
 	text = { localization_key = generic.Caliphate }
 }
 
@@ -11776,7 +11779,7 @@ defined_text = {
 	text = { trigger = { original_tag = VER } localization_key = VER.Neutral_conservatism }
 	text = { trigger = { original_tag = YEM } localization_key = YEM.Neutral_conservatism }
 	text = { trigger = { original_tag = ZAM } localization_key = ZAM.Neutral_conservatism }
-
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Neutral_conservatism }
 	text = { trigger = { original_tag = TIM } localization_key = TIM.Neutral_conservatism }
 
 	text = { trigger = { original_tag = CAN } localization_key = CAN.Neutral_conservatism }
@@ -11835,6 +11838,7 @@ defined_text = {
 	text = { trigger = { original_tag = SOV } localization_key = SOV.oligarchism }
 	text = { trigger = { original_tag = SWE } localization_key = SWE.oligarchism }
 	text = { trigger = { original_tag = HLS } localization_key = HLS.oligarchism }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.oligarchism }
 	text = { trigger = { original_tag = UKR has_country_flag = UKR_BPP } localization_key = UKR.oligarchism_2017 }
 
 	text = { trigger = { original_tag = ITA has_country_flag = ITA_romanization_decisions } localization_key = ITA.oligarchism_roman }
@@ -12052,6 +12056,7 @@ defined_text = {
 	text = { trigger = { original_tag = SWE } localization_key = SWE.Neutral_Libertarian }
 	text = { trigger = { original_tag = UKR has_country_flag = UKR_FIVE_TEN } localization_key = UKR.Neutral_Libertarian_2017 }
 	text = { trigger = { original_tag = USA } localization_key = USA.Neutral_Libertarian }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Neutral_Libertarian }
 	text = { localization_key = generic.Neutral_Libertarian }
 }
 
@@ -12177,6 +12182,7 @@ defined_text = {
 	text = { trigger = { original_tag = GER } localization_key = GER.Neutral_Communism }
 	text = { trigger = { original_tag = SOV } localization_key = SOV.Neutral_Communism }
 	text = { trigger = { original_tag = USA } localization_key = USA.Neutral_Communism }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Neutral_Communism }
 	text = { localization_key = generic.Neutral_Communism }
 }
 
@@ -12289,6 +12295,7 @@ defined_text = {
 	text = { trigger = { original_tag = SWE } localization_key = SWE.Neutral_green }
 	text = { trigger = { original_tag = UKR } localization_key = UKR.Neutral_green }
 	text = { trigger = { original_tag = USA } localization_key = USA.Neutral_green }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Neutral_green }
 	text = { localization_key = generic.Neutral_green }
 }
 
@@ -12703,6 +12710,7 @@ defined_text = {
 	text = { trigger = { original_tag = UKR } localization_key = UKR.Nat_Populism }
 	text = { trigger = { original_tag = USA } localization_key = USA.Nat_Populism }
 	text = { trigger = { original_tag = HLS } localization_key = HLS.Nat_Populism }
+	text = { trigger = { original_tag = JAM } localization_key = JAM.Nat_Populism }
 	text = { localization_key = generic.Nat_Populism }
 
 }
