@@ -431,7 +431,7 @@
  # Ideas
  article_nine_jap: "Article 9"
  article_nine_jap_desc: "Article 9 of the Japanese Constitution  is a clause in the national Constitution of Japan outlawing war as a means to settle international disputes involving the state. \n \nThe Constitution came into effect on May 3, 1947, following World War II. In its text, the state formally renounces the sovereign right of belligerency and aims at an international peace based on justice and order. The article also states that, to accomplish these aims, armed forces with war potential will not be maintained."
- article_nine_jap_tt: "§RCannot increase conscription law or declare wars.\nCannot train units, disband units, or edit unit templates.\n§!"
+ article_nine_jap_tt: "§RCannot declare wars.\nCannot train units, disband units, or edit unit templates.\n§!"
  JAP_support_business: "Support for Business"
  JAP_support_business_desc: "The [JAP.GetAdjective] government has injected money to stagnant businesses, to help the Japanese economy."
  JAP_reformed_economic_ministry: "Reformed Economic Ministry"
