@@ -3481,10 +3481,26 @@
 
  JAM.conservatism: "£generic_conservatism_small Jamaica Labour Party (JLP)"
  JAM.conservatism_desc: ""
+ JAM.socialism: "£generic_socialism_small New National Coalition"
+ JAM.socialism_desc: ""
+ JAM.Communist-State: "£generic_Communist_State_small Communist Party of Jamaica"
+ JAM.Communist-State_desc: ""
+ JAM.Caliphate: "£generic_Caliphate_small Islamic State of Jamaica"
+ JAM.Caliphate_desc: ""
  JAM.Neutral_conservatism: "£generic_Neutral_conservatism_small National Democratic Movement (NDM)"
  JAM.Neutral_conservatism_desc: ""
+ JAM.oligarchism: "£generic_oligarchism_small Shower Posse"
+ JAM.oligarchism_desc: ""
+ JAM.Neutral_Libertarian: "£generic_Neutral_Libertarian_small United Independents' Congres of Jamaica"
+ JAM.Neutral_Libertarian_desc: ""
+ JAM.Neutral_green: "£generic_Neutral_green_small Farmers' Party"
+ JAM.Neutral_green_desc: ""
  JAM.neutral_Social: "£generic_neutral_Social_small People's National Party (PNP)"
  JAM.neutral_Social_desc: ""
+ JAM.Neutral_Communism: "£generic_Neutral_Communism_small Workers' Party of Jamaica"
+ JAM.Neutral_Communism_desc: ""
+ JAM.Nat_Populism: "£generic_Nat_Populism_small Revolutionary Konservative Movement"
+ JAM.Nat_Populism_desc: ""
  JAM.Nat_Autocracy: "£generic_Nat_Autocracy_small Jamaica Defence Force (JDF)"
  JAM.Nat_Autocracy_desc: ""
  JOR.Western_Autocracy: "£JOR_Autocracy_small Hashemites - Western Clique"
