@@ -13,23 +13,29 @@ Bugfixes:
  - Fixed PMC's trying to spawn units with non-existing c&c equipment
  - Fixed wrong number of max planes in airwing menu (instead of 100 from vanilla now 50)
  - Fixed broken localisation for revolts in Spain
- - Fixed broken icon for focus Spread Right Wing Propagand in Spanish Focus Tree
+ - Fixed broken icon for focus Spread Right Wing Propaganda in Spanish Focus Tree
  - Fixed issues with the North Korean Focus Tree
  - Belize, Northern Cyprus, Cyprus, Bahrain, Hezbollah now have gifted income to avoid debt shit
  - Fixed strange effects tooltip in event IMF Demands Land Reform
- - Fixed missing artillety technology for Liechtenstein
+ - Fixed missing artillery technology for Liechtenstein
  - Fixed decision to reduce autonomy don't disappear if you lost puppet
  - Fixed prerequisites in decision Replace Saudi Arabia as Leader of the GCC
  - Kuwait now don't should have completed focuses in 2000
 
+Content:
+ - Updated Jamaican political parties
+
 Focus Tree:
  - Tweaks to the American Focus Tree
+
+Graphics:
+ - Changed the Office Sector building to be a light blue so it's more obvious when it is available
 
 GUI:
  - Better position for things in topbar
  - Fixed the Ship Filters section in the naval production screen
 
- Performance:
+Performance:
  - Optimized on_startup on action so the game should load in faster
 
  Quality of Life (QoL):
